Fixed font legibility, added favicon

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ a {
 p {
   font-size: 1.8rem;
   font-weight: 300;
+  text-shadow: black 0px 0px 10px;
 }
 img {
   width: 100%;
@@ -281,7 +282,7 @@ li {
 .skills {
   margin-top: 10rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   grid-gap: 2rem;
   text-align: center;
 }
@@ -297,6 +298,9 @@ li {
   text-transform: uppercase;
   letter-spacing: 2px;
   margin: 2rem -2px 2rem 0;
+}
+p{
+  text-shadow: black 0px 0px 10px;
 }
 
 .icon-container {
